--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.1-alpha.2",
+    "mongodb": "^3.1.13",
     "nodemon": "^1.18.10"
   }
 }
