--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "csv-write-stream": "^2.0.0",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.1-alpha.2",
     "mongodb": "^3.1.13",
